Fix color contrast issues

--- a/assets/main.css
+++ b/assets/main.css
@@ -247,6 +247,20 @@ footer {
   padding-top: 10px;
 }
 
+span.number-circle {
+  color: #6E6E6E;
+  border-radius: 50%;
+  border: 2px solid #6E6E6E;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 24px;
+  display: block;
+  float: left;
+  margin-right: 7px;
+  font-size: 20px;
+}
+
 /* --- --- */
 
 /* ### ### */
